RESOLVED FIXED301097
REGRESSION(301753@main): Broke TestWebKitAPI.IndexedDB.DeleteRecovery on Debug
https://bugs.webkit.org/show_bug.cgi?id=301097
Summary REGRESSION(301753@main): Broke TestWebKitAPI.IndexedDB.DeleteRecovery on Debug
Jonathan Bedard
Reported 2025-10-20 08:29:26 PDT
301753@main broke TestWebKitAPI.IndexedDB.DeleteRecovery on Debug builds. TestWebKitAPI.IndexedDB.DeleteRecovery 2025-10-20 05:30:04.045 TestWebKitAPI[26521:4767462] NSEventConcurrentProcessingEnabled=NO ASSERTION FAILED: !(blobSize % sizeof(T)) /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Source/WebCore/platform/sql/SQLiteExtras.h(81) : std::span<const T> WebCore::sqliteColumnBlob(sqlite3_stmt *, int) [T = char16_t] 1 0x34f6b0140 std::__1::span<char16_t const, 18446744073709551615ul> WebCore::sqliteColumnBlob<char16_t>(sqlite3_stmt*, int) 2 0x34f6b0024 WebCore::SQLiteStatement::columnBlobAsString(int) 3 0x34bd01218 WebCore::IDBServer::SQLiteIDBBackingStore::databaseNameAndVersionFromFile(WTF::String const&) 4 0x34bd01e38 WebCore::IDBServer::SQLiteIDBBackingStore::databaseVersion() 5 0x34bd1e004 WebCore::IDBServer::UniqueIDBDatabase::deleteBackingStore() 6 0x34bd1dacc WebCore::IDBServer::UniqueIDBDatabase::performCurrentDeleteOperation() 7 0x34bd1e56c WebCore::IDBServer::UniqueIDBDatabase::handleCurrentOperation() 8 0x34bd1bb30 WebCore::IDBServer::UniqueIDBDatabase::handleDatabaseOperations() 9 0x34bd1e998 WebCore::IDBServer::UniqueIDBDatabase::handleDelete(WebCore::IDBServer::IDBConnectionToClient&, WebCore::IDBOpenRequestData const&) 10 0x1320e27a0 WebKit::IDBStorageManager::deleteDatabase(WebCore::IDBServer::IDBConnectionToClient&, WebCore::IDBOpenRequestData const&) 11 0x1320f5dd8 WebKit::NetworkStorageManager::deleteDatabase(IPC::Connection&, WebCore::IDBOpenRequestData const&) 12 0x130b51bbc auto void IPC::callMemberFunction<WebKit::NetworkStorageManager, WebKit::NetworkStorageManager, void (IPC::Connection&, WebCore::IDBOpenRequestData const&), std::__1::tuple<WebCore::IDBOpenRequestData>>(WebKit::NetworkStorageManager*, void (WebKit::NetworkStorageManager::*)(IPC::Connection&, WebCore::IDBOpenRequestData const&), IPC::Connection&, std::__1::tuple<WebCore::IDBOpenRequestData>&&)::'lambda'(auto&&...)::operator()<WebCore::IDBOpenRequestData>(auto&&...) const 13 0x130b51afc decltype(std::declval<WebKit::NetworkStorageManager>()(std::declval<WebCore::IDBOpenRequestData>())) std::__1::__invoke[abi:sn190102]<void IPC::callMemberFunction<WebKit::NetworkStorageManager, WebKit::NetworkStorageManager, void (IPC::Connection&, WebCore::IDBOpenRequestData const&), std::__1::tuple<WebCore::IDBOpenRequestData>>(WebKit::NetworkStorageManager*, void (WebKit::NetworkStorageManager::*)(IPC::Connection&, WebCore::IDBOpenRequestData const&), IPC::Connection&, std::__1::tuple<WebCore::IDBOpenRequestData>&&)::'lambda'(auto&&...), WebCore::IDBOpenRequestData>(WebKit::NetworkStorageManager&&, WebCore::IDBOpenRequestData&&) 14 0x130b51ad0 decltype(auto) std::__1::__apply_tuple_impl[abi:sn190102]<void IPC::callMemberFunction<WebKit::NetworkStorageManager, WebKit::NetworkStorageManager, void (IPC::Connection&, WebCore::IDBOpenRequestData const&), std::__1::tuple<WebCore::IDBOpenRequestData>>(WebKit::NetworkStorageManager*, void (WebKit::NetworkStorageManager::*)(IPC::Connection&, WebCore::IDBOpenRequestData const&), IPC::Connection&, std::__1::tuple<WebCore::IDBOpenRequestData>&&)::'lambda'(auto&&...), std::__1::tuple<WebCore::IDBOpenRequestData>, 0ul>(WebKit::NetworkStorageManager&&, WebKit::NetworkStorageManager&&, std::__1::__tuple_indices<0ul>) 15 0x130b51a94 decltype(auto) std::__1::apply[abi:sn190102]<void IPC::callMemberFunction<WebKit::NetworkStorageManager, WebKit::NetworkStorageManager, void (IPC::Connection&, WebCore::IDBOpenRequestData const&), std::__1::tuple<WebCore::IDBOpenRequestData>>(WebKit::NetworkStorageManager*, void (WebKit::NetworkStorageManager::*)(IPC::Connection&, WebCore::IDBOpenRequestData const&), IPC::Connection&, std::__1::tuple<WebCore::IDBOpenRequestData>&&)::'lambda'(auto&&...), std::__1::tuple<WebCore::IDBOpenRequestData>>(WebKit::NetworkStorageManager&&, WebKit::NetworkStorageManager&&) 16 0x130b50f90 void IPC::callMemberFunction<WebKit::NetworkStorageManager, WebKit::NetworkStorageManager, void (IPC::Connection&, WebCore::IDBOpenRequestData const&), std::__1::tuple<WebCore::IDBOpenRequestData>>(WebKit::NetworkStorageManager*, void (WebKit::NetworkStorageManager::*)(IPC::Connection&, WebCore::IDBOpenRequestData const&), IPC::Connection&, std::__1::tuple<WebCore::IDBOpenRequestData>&&) 17 0x130b0aa04 void IPC::handleMessage<Messages::NetworkStorageManager::DeleteDatabase, IPC::Connection, WebKit::NetworkStorageManager, WebKit::NetworkStorageManager, void (IPC::Connection&, WebCore::IDBOpenRequestData const&)>(IPC::Connection&, IPC::Decoder&, WebKit::NetworkStorageManager*, void (WebKit::NetworkStorageManager::*)(IPC::Connection&, WebCore::IDBOpenRequestData const&)) 18 0x130b05830 WebKit::NetworkStorageManager::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 19 0x133c6edbc void IPC::Connection::dispatchMessageReceiverMessage<IPC::WorkQueueMessageReceiverBase>(IPC::WorkQueueMessageReceiverBase&, WTF::UniqueRef<IPC::Decoder>&&) 20 0x133c7f5c4 IPC::WorkQueueMessageReceiverQueue::enqueueMessage(IPC::Connection&, WTF::UniqueRef<IPC::Decoder>&&)::'lambda'()::operator()() 21 0x133c7f34c WTF::Detail::CallableWrapper<IPC::WorkQueueMessageReceiverQueue::enqueueMessage(IPC::Connection&, WTF::UniqueRef<IPC::Decoder>&&)::'lambda'(), void>::call() 22 0x1058ae6c4 WTF::Function<void ()>::operator()() const 23 0x105a0257c WTF::SuspendableWorkQueue::dispatch(WTF::Function<void ()>&&)::$_0::operator()() const 24 0x105a024b4 WTF::Detail::CallableWrapper<WTF::SuspendableWorkQueue::dispatch(WTF::Function<void ()>&&)::$_0, void>::call() 25 0x1058ae6c4 WTF::Function<void ()>::operator()() const 26 0x105a87adc WTF::(anonymous namespace)::DispatchWorkItem::operator()() 27 0x105a86794 void WTF::dispatchWorkItem<WTF::(anonymous namespace)::DispatchWorkItem>(void*) 28 0x19ec1485c _dispatch_client_callout 29 0x19ec03350 _dispatch_lane_serial_drain 30 0x19ec03e2c _dispatch_lane_invoke 31 0x19ec0e264 _dispatch_root_queue_drain_deferred_wlh /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/IDBDeleteRecovery.mm:80 Expected equality of these values: @"Deleted database" Which is: "Deleted database" [lastScriptMessage body] Which is: "Error deleting database" History: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.IndexedDB.DeleteRecovery Test run: https://build.webkit.org/#/builders/1226/builds/2546
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-20 08:29:39 PDT
Jonathan Bedard
Comment 2 2025-10-20 08:35:29 PDT
EWS
Comment 3 2025-10-20 09:33:45 PDT
Committed 301809@main (7d1e1b6b0cd6): <https://commits.webkit.org/301809@main> Reviewed commits have been landed. Closing PR #52658 and removing active labels.
Sihui Liu
Comment 4 2025-10-20 09:43:18 PDT
EWS
Comment 5 2025-10-20 11:33:44 PDT
Committed 301816@main (44890a3e7dbf): <https://commits.webkit.org/301816@main> Reviewed commits have been landed. Closing PR #52661 and removing active labels.
Jonathan Bedard
Comment 6 2025-10-20 17:18:28 PDT
Re-opening for pull request https://github.com/apple/WebKit/pull/3806
EWS
Comment 7 2025-10-20 18:18:40 PDT
Committed 301765.53@safari-7623-branch (c604ef53a343): <https://commits.webkit.org/301765.53@safari-7623-branch> Reviewed commits have been landed. Closing PR #3815 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.