REGRESSION(301753@main): Broke TestWebKitAPI.IndexedDB.DeleteRecovery on Debug https://bugs.webkit.org/show_bug.cgi?id=301097 rdar://163038603

Reviewed by Per Arne Vollan.

301753@main changes encoding format for database name with metadata verion upgrade: i.e. if it is old metadata version,
SQLiteIDBBackingStore should read the database name in old format from database; and if it is new metadata version,
SQLiteIDBBackingStore should read the database name in new format. However, there is a place that
(`SQLiteIDBBackingStore::databaseNameAndVersionFromFile`) always reads the name in new format, without checking metadata
version, and this has led the test to fail.

To fix this, introduce databaseMetadataVersionAndNameFromDatabase that reads database name based on metadata version,
and make databaseNameAndVersionFromFile invoke databaseMetadataVersionAndNameFromDatabase.

* Source/WebCore/Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:
(WebCore::IDBServer::databaseMetadataVersionAndNameFromDatabase):
(WebCore::IDBServer::migrateIDBDatabaseInfoTableIfNecessary):
(WebCore::IDBServer::SQLiteIDBBackingStore::databaseNameAndVersionFromFile):
(WebCore::IDBServer::getDatabaseNameFromDatabase): Deleted.
* Tools/TestWebKitAPI/Tests/WebKitCocoa/IDBDeleteRecovery.mm:
(TEST(IndexedDB, DeleteRecovery)):

Canonical link: https://commits.webkit.org/301816@main